HF model card example

--- a/examples/EncoderDecoderModel/bert2bert-HF-example.ipynb
+++ b/examples/EncoderDecoderModel/bert2bert-HF-example.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Bert2Bert Summarization with 🤗 EncoderDecoder Framework\n",
+    "### https://github.com/huggingface/transformers/blob/12f14710cea72a2104ff698762a8fc68a5dc0a0b/model_cards/patrickvonplaten/bert2bert-cnn_dailymail-fp16/README.md"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -8,22 +16,33 @@
    "source": [
     "import torch\n",
     "import sys\n",
+    "import logging\n",
+    "\n",
     "sys.path.append('./../../src/')\n",
-    "from transformers import BertTokenizer, EncoderDecoderModel"
+    "from transformers import BertTokenizer, EncoderDecoderModel, Trainer, TrainingArguments\n",
+    "\n",
+    "sys.path.append('./../../../HF-nlp-20/src/')\n",
+    "import nlp"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logging.basicConfig(level=logging.INFO)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# initialize Bert2Bert\n",
     "model = EncoderDecoderModel.from_encoder_decoder_pretrained('bert-base-uncased', 'bert-base-uncased') \n",
-    "tokenizer = BertTokenizer.from_pretrained('bert-base-uncased')\n",
-    "model_kwargs = {}"
+    "tokenizer = BertTokenizer.from_pretrained('bert-base-uncased')"
    ]
   },
   {
@@ -32,9 +51,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# tokenization\n",
-    "input_ids = torch.tensor(tokenizer.encode(\"Hello, my dog is cute\", \n",
-    "                                          add_special_tokens=True)).unsqueeze(0)  # Batch size 1"
+    "# CLS token will work as BOS token = '[CLS]'\n",
+    "tokenizer.bos_token = tokenizer.cls_token\n",
+    "\n",
+    "# SEP token will work as EOS token = '[SEP]'\n",
+    "tokenizer.eos_token = tokenizer.sep_token"
    ]
   },
   {
@@ -43,8 +64,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# forward\n",
-    "outputs = model(input_ids=input_ids, decoder_input_ids=input_ids)"
+    "# load train and validation data\n",
+    "train_dataset = nlp.load_dataset(\"cnn_dailymail\", \"3.0.0\", split=\"train\")\n",
+    "val_dataset = nlp.load_dataset(\"cnn_dailymail\", \"3.0.0\", split=\"validation[:10%]\")\n",
+    "\n",
+    "# load rouge for validation\n",
+    "rouge = nlp.load_metric(\"rouge\")"
    ]
   },
   {
@@ -53,8 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# training\n",
-    "loss, outputs = model(input_ids=input_ids, decoder_input_ids=input_ids, labels=input_ids)[:2]"
+    "val_dataset"
    ]
   },
   {
@@ -63,8 +87,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# generation\n",
-    "generated = model.generate(input_ids, decoder_start_token_id=model.config.decoder.pad_token_id)"
+    "# set decoding params\n",
+    "model.config.decoder_start_token_id = tokenizer.bos_token_id\n",
+    "model.config.eos_token_id = tokenizer.eos_token_id\n",
+    "model.config.max_length = 142\n",
+    "model.config.min_length = 56\n",
+    "model.config.no_repeat_ngram_size = 3\n",
+    "model.early_stopping = True\n",
+    "model.length_penalty = 2.0\n",
+    "model.num_beams = 4"
    ]
   },
   {
@@ -73,7 +104,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "generated_txt = tokenizer.decode(generated.squeeze(0).tolist())"
+    "# map data correctly\n",
+    "def map_to_encoder_decoder_inputs(batch):\n",
+    "    # Tokenizer will automatically set [BOS] <text> [EOS]\n",
+    "    # cut off at BERT max length 512\n",
+    "    inputs = tokenizer(batch[\"article\"], padding=\"max_length\", truncation=True, max_length=512)\n",
+    "    # force summarization <= 128\n",
+    "    outputs = tokenizer(batch[\"highlights\"], padding=\"max_length\", truncation=True, max_length=128)\n",
+    "\n",
+    "    batch[\"input_ids\"] = inputs.input_ids\n",
+    "    batch[\"attention_mask\"] = inputs.attention_mask\n",
+    "\n",
+    "    batch[\"decoder_input_ids\"] = outputs.input_ids\n",
+    "    batch[\"labels\"] = outputs.input_ids.copy()\n",
+    "    # mask loss for padding\n",
+    "    batch[\"labels\"] = [\n",
+    "        [-100 if token == tokenizer.pad_token_id else token for token in labels] for labels in batch[\"labels\"]\n",
+    "    ]\n",
+    "    batch[\"decoder_attention_mask\"] = outputs.attention_mask\n",
+    "    \n",
+    "    assert all([len(x) == 512 for x in inputs.input_ids])\n",
+    "    assert all([len(x) == 128 for x in outputs.input_ids])\n",
+    "    \n",
+    "    return batch"
    ]
   },
   {
@@ -82,7 +135,160 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "generated_txt"
+    "def compute_metrics(pred):\n",
+    "    labels_ids = pred.label_ids\n",
+    "    pred_ids = pred.predictions\n",
+    "\n",
+    "    # all unnecessary tokens are removed\n",
+    "    pred_str = tokenizer.batch_decode(pred_ids, skip_special_tokens=True)\n",
+    "    label_str = tokenizer.batch_decode(labels_ids, skip_special_tokens=True)\n",
+    "    \n",
+    "    rouge_output = rouge.compute(predictions=pred_str, references=label_str, rouge_types=[\"rouge2\"])[\"rouge2\"].mid\n",
+    "    \n",
+    "    return {\n",
+    "        \"rouge2_precision\": round(rouge_output.precision, 4),\n",
+    "        \"rouge2_recall\": round(rouge_output.recall, 4),\n",
+    "        \"rouge2_fmeasure\": round(rouge_output.fmeasure, 4),\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set batch size here\n",
+    "batch_size = 16\n",
+    "\n",
+    "# make train dataset ready\n",
+    "train_dataset = train_dataset.map(\n",
+    "    map_to_encoder_decoder_inputs, batched=True, batch_size=batch_size, remove_columns=[\"article\", \"highlights\"],\n",
+    ")\n",
+    "train_dataset.set_format(\n",
+    "    type=\"torch\", columns=[\"input_ids\", \"attention_mask\", \"decoder_input_ids\", \"decoder_attention_mask\", \"labels\"],\n",
+    ")\n",
+    "\n",
+    "# same for validation dataset\n",
+    "val_dataset = val_dataset.map(\n",
+    "    map_to_encoder_decoder_inputs, batched=True, batch_size=batch_size, remove_columns=[\"article\", \"highlights\"],\n",
+    ")\n",
+    "val_dataset.set_format(\n",
+    "    type=\"torch\", columns=[\"input_ids\", \"attention_mask\", \"decoder_input_ids\", \"decoder_attention_mask\", \"labels\"],\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set training arguments - these params are not really tuned, feel free to change\n",
+    "training_args = TrainingArguments(\n",
+    "    output_dir=\"./\",\n",
+    "    per_device_train_batch_size=batch_size,\n",
+    "    per_device_eval_batch_size=batch_size,\n",
+    "    predict_from_generate=True,\n",
+    "    evaluate_during_training=True,\n",
+    "    do_train=True,\n",
+    "    do_eval=True,\n",
+    "    logging_steps=1000,\n",
+    "    save_steps=1000,\n",
+    "    eval_steps=1000,\n",
+    "    overwrite_output_dir=True,\n",
+    "    warmup_steps=2000,\n",
+    "    save_total_limit=10,\n",
+    ")\n",
+    "\n",
+    "# instantiate trainer\n",
+    "trainer = Trainer(\n",
+    "    model=model,\n",
+    "    args=training_args,\n",
+    "    compute_metrics=compute_metrics,\n",
+    "    train_dataset=train_dataset,\n",
+    "    eval_dataset=val_dataset,\n",
+    ")\n",
+    "\n",
+    "# start training\n",
+    "trainer.train()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nlp\n",
+    "from transformers import BertTokenizer, EncoderDecoderModel\n",
+    "tokenizer = BertTokenizer.from_pretrained(\"patrickvonplaten/bert2bert-cnn_dailymail-fp16\")\n",
+    "model = EncoderDecoderModel.from_pretrained(\"patrickvonplaten/bert2bert-cnn_dailymail-fp16\")\n",
+    "model.to(\"cuda\")\n",
+    "test_dataset = nlp.load_dataset(\"cnn_dailymail\", \"3.0.0\", split=\"test\")\n",
+    "batch_size = 128"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# map data correctly\n",
+    "def generate_summary(batch):\n",
+    "    # Tokenizer will automatically set [BOS] <text> [EOS]\n",
+    "    # cut off at BERT max length 512\n",
+    "    inputs = tokenizer(batch[\"article\"], padding=\"max_length\", truncation=True, max_length=512, return_tensors=\"pt\")\n",
+    "    input_ids = inputs.input_ids.to(\"cuda\")\n",
+    "    print('input_ids: ', input_ids)\n",
+    "    print('input_ids: ', type(input_ids))\n",
+    "    print('input_ids: ', input_ids.size())\n",
+    "    attention_mask = inputs.attention_mask.to(\"cuda\")\n",
+    "    outputs = model.generate(input_ids, attention_mask=attention_mask)\n",
+    "    # all special tokens including will be removed\n",
+    "    output_str = tokenizer.batch_decode(outputs, skip_special_tokens=True)\n",
+    "    batch[\"pred\"] = output_str\n",
+    "    return batch\n",
+    "\n",
+    "results = test_dataset.map(generate_summary, batched=True, batch_size=batch_size, remove_columns=[\"article\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load rouge for validation\n",
+    "rouge = nlp.load_metric(\"rouge\")\n",
+    "pred_str = results[\"pred\"]\n",
+    "label_str = results[\"highlights\"]\n",
+    "rouge_output = rouge.compute(predictions=pred_str, references=label_str, rouge_types=[\"rouge2\"])[\"rouge2\"].mid\n",
+    "print(rouge_output)"
    ]
   },
   {
@@ -91,73 +297,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "decoder_input_ids = torch.tensor(tokenizer.encode(\"[CLS]\")).unsqueeze(0)  # Batch size 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# forward\n",
-    "outputs = model(input_ids=input_ids, decoder_input_ids=decoder_input_ids)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# training\n",
-    "loss, outputs = model(input_ids=input_ids, decoder_input_ids=decoder_input_ids, labels=decoder_input_ids)[:2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "loss"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# generation\n",
-    "generated = model.generate(input_ids, decoder_start_token_id=model.config.decoder.pad_token_id)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "generated"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "generated_txt = tokenizer.decode(generated.squeeze(0).tolist())\n",
-    "print(generated_txt)"
-   ]
   }
  ],
  "metadata": {
