--- a/examples/EncoderDecoderModel/esnli_bert2bert.ipynb
+++ b/examples/EncoderDecoderModel/esnli_bert2bert.ipynb
@@ -10,7 +10,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import torch\n",
@@ -24,7 +26,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "torch.manual_seed(0)\n",
@@ -36,7 +40,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train_data_path = '/data/rosa/data/esnli/esnli_train.csv'\n",
@@ -65,7 +71,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class EsnliProcessor(DataProcessor):\n",
@@ -113,7 +121,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "processor = EsnliProcessor()"
@@ -122,7 +132,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# #using a smaller dataset so faster to test my code\n",
@@ -132,7 +144,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "dev_examples = processor.get_dev_examples(dev_data_path) "
@@ -148,7 +162,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import logging as logger\n",
@@ -158,7 +174,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# attention mask: avoid performing attention on padding token indices\n",
@@ -169,7 +187,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "tokenizer = BertTokenizer.from_pretrained('bert-base-uncased')"
@@ -178,7 +198,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def esnli_examples_to_features(examples, max_seq_len, tokenizer, cls_token='[CLS]', sep_token='[SEP]', \n",
@@ -219,7 +241,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def text_to_input_ids(text, max_seq_len, tokenizer, cls_token='[CLS]', sep_token='[SEP]', \n",
@@ -249,7 +273,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class EsnliInputFeatures(object):\n",
@@ -267,7 +293,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# # Cache training dataset features\n",
@@ -283,7 +311,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "dev_features = esnli_examples_to_features(dev_examples, max_seq_len, tokenizer)"
@@ -300,6 +330,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -310,7 +341,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%reload_ext autoreload"
@@ -319,7 +352,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%autoreload 2"
@@ -328,7 +363,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from transformers import EncoderDecoderModel\n",
@@ -338,7 +375,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# #initialize Bert2Bert\n",
@@ -348,7 +387,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# training_args = TrainingArguments(\n",
@@ -375,7 +416,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# # Call trainer.train() to train.\n",
@@ -393,7 +436,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "output_dir = save_trained_model_dir\n",
@@ -403,7 +448,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# trainer.save_model(output_dir)"
@@ -419,7 +466,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Load a trained model and vocabulary that you have fine-tuned\n",
@@ -431,7 +480,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model.config.max_length=128\n",
@@ -442,7 +493,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "eval_args = TrainingArguments(\n",
@@ -456,7 +509,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "evaluator = Trainer(\n",
@@ -469,7 +524,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Evaluate\n",
@@ -486,7 +543,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from nltk.translate.bleu_score import sentence_bleu, corpus_bleu\n",
@@ -496,7 +555,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def get_bleu_score(pred_gold_csv):\n",
@@ -536,7 +597,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def remove_special_tokens(token_list):    \n",
@@ -560,16 +623,154 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "get_bleu_score('./08:11_09:58:20.csv')"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Get inter-annotator bleu score of gold expls "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "bleu_scores_expl1 = []\n",
+    "bleu_scores_expl2 = []\n",
+    "bleu_scores_expl3 = []\n",
+    "with open('./esnli_train_results/eval_on_dev.csv', newline='') as f:\n",
+    "    reader = csv.reader(f)\n",
+    "    for (i, line) in enumerate(reader):\n",
+    "        if i == 0:\n",
+    "            continue\n",
+    "        gold_expl_1 = eval(line[1])\n",
+    "        gold_expl_2 = eval(line[2])\n",
+    "        gold_expl_3 = eval(line[3])\n",
+    "        # process the explanations before passing to compute bleu scores: \n",
+    "        # get rid of the CLS, SEP, can PAD tokens - tokens with id 101, 102, and 0\n",
+    "        gold_expl_1 = remove_special_tokens(gold_expl_1)\n",
+    "        gold_expl_2 = remove_special_tokens(gold_expl_2)\n",
+    "        gold_expl_3 = remove_special_tokens(gold_expl_3)\n",
+    "\n",
+    "        bleu_scores_expl1.append(corpus_bleu([[gold_expl_2, gold_expl_3]], [gold_expl_1]))\n",
+    "        bleu_scores_expl2.append(corpus_bleu([[gold_expl_1, gold_expl_3]], [gold_expl_2]))\n",
+    "        bleu_scores_expl3.append(corpus_bleu([[gold_expl_1, gold_expl_2]], [gold_expl_3]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(mean(bleu_scores_expl1))\n",
+    "print(mean(bleu_scores_expl2))\n",
+    "print(mean(bleu_scores_expl3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "tokens = tokenizer.tokenize(\"hi, how are you\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bleu_scores_expl1 = []\n",
+    "bleu_scores_expl2 = []\n",
+    "bleu_scores_expl3 = []\n",
+    "with open('./sanity-checks/esnli_dev.csv', newline='') as f:\n",
+    "    reader = csv.reader(f)\n",
+    "    for (i, line) in enumerate(reader):\n",
+    "        if i == 0:\n",
+    "            continue\n",
+    "        gold_expl_1 = tokenizer.tokenize(line[4])\n",
+    "        gold_expl_2 = tokenizer.tokenize(line[9])\n",
+    "        gold_expl_3 = tokenizer.tokenize(line[14])\n",
+    "\n",
+    "        bleu_scores_expl1.append(corpus_bleu([[gold_expl_2, gold_expl_3]], [gold_expl_1]))\n",
+    "        bleu_scores_expl2.append(corpus_bleu([[gold_expl_1, gold_expl_3]], [gold_expl_2]))\n",
+    "        bleu_scores_expl3.append(corpus_bleu([[gold_expl_1, gold_expl_2]], [gold_expl_3]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(mean(bleu_scores_expl1))\n",
+    "print(mean(bleu_scores_expl2))\n",
+    "print(mean(bleu_scores_expl3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bleu_scores_expl1 = []\n",
+    "bleu_scores_expl2 = []\n",
+    "bleu_scores_expl3 = []\n",
+    "with open('/data/rosa/data/esnli/esnli_test.csv', newline='') as f:\n",
+    "    reader = csv.reader(f)\n",
+    "    for (i, line) in enumerate(reader):\n",
+    "        if i == 0:\n",
+    "            continue\n",
+    "        gold_expl_1 = tokenizer.tokenize(line[4])\n",
+    "        gold_expl_2 = tokenizer.tokenize(line[9])\n",
+    "        gold_expl_3 = tokenizer.tokenize(line[14])\n",
+    "\n",
+    "        bleu_scores_expl1.append(corpus_bleu([[gold_expl_2, gold_expl_3]], [gold_expl_1]))\n",
+    "        bleu_scores_expl2.append(corpus_bleu([[gold_expl_1, gold_expl_3]], [gold_expl_2]))\n",
+    "        bleu_scores_expl3.append(corpus_bleu([[gold_expl_1, gold_expl_2]], [gold_expl_3]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(mean(bleu_scores_expl1))\n",
+    "print(mean(bleu_scores_expl2))\n",
+    "print(mean(bleu_scores_expl3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -590,7 +791,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
