remove unnecessary code

--- a/examples/EncoderDecoderModel/esnli_bert2bert.ipynb
+++ b/examples/EncoderDecoderModel/esnli_bert2bert.ipynb
@@ -644,65 +644,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bleu_scores_expl1 = []\n",
-    "bleu_scores_expl2 = []\n",
-    "bleu_scores_expl3 = []\n",
-    "with open('./esnli_train_results/eval_on_dev.csv', newline='') as f:\n",
-    "    reader = csv.reader(f)\n",
-    "    for (i, line) in enumerate(reader):\n",
-    "        if i == 0:\n",
-    "            continue\n",
-    "        gold_expl_1 = eval(line[1])\n",
-    "        gold_expl_2 = eval(line[2])\n",
-    "        gold_expl_3 = eval(line[3])\n",
-    "        # process the explanations before passing to compute bleu scores: \n",
-    "        # get rid of the CLS, SEP, can PAD tokens - tokens with id 101, 102, and 0\n",
-    "        gold_expl_1 = remove_special_tokens(gold_expl_1)\n",
-    "        gold_expl_2 = remove_special_tokens(gold_expl_2)\n",
-    "        gold_expl_3 = remove_special_tokens(gold_expl_3)\n",
-    "\n",
-    "        bleu_scores_expl1.append(corpus_bleu([[gold_expl_2, gold_expl_3]], [gold_expl_1]))\n",
-    "        bleu_scores_expl2.append(corpus_bleu([[gold_expl_1, gold_expl_3]], [gold_expl_2]))\n",
-    "        bleu_scores_expl3.append(corpus_bleu([[gold_expl_1, gold_expl_2]], [gold_expl_3]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(mean(bleu_scores_expl1))\n",
-    "print(mean(bleu_scores_expl2))\n",
-    "print(mean(bleu_scores_expl3))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "tokens = tokenizer.tokenize(\"hi, how are you\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tokens"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# On dev\n",
     "bleu_scores_expl1 = []\n",
     "bleu_scores_expl2 = []\n",
     "bleu_scores_expl3 = []\n",
@@ -737,6 +679,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# On test\n",
     "bleu_scores_expl1 = []\n",
     "bleu_scores_expl2 = []\n",
     "bleu_scores_expl3 = []\n",
@@ -791,7 +734,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
