compute bleu scores in envs rosa

--- a/examples/EncoderDecoderModel/esnli_bert2bert.ipynb
+++ b/examples/EncoderDecoderModel/esnli_bert2bert.ipynb
@@ -9,10 +9,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
@@ -25,10 +23,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "torch.manual_seed(0)\n",
@@ -39,10 +35,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "train_data_path = '/data/rosa/data/esnli/esnli_train.csv'\n",
@@ -60,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,9 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class EsnliProcessor(DataProcessor):\n",
@@ -121,9 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "processor = EsnliProcessor()"
@@ -132,9 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# #using a smaller dataset so faster to test my code\n",
@@ -144,9 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "dev_examples = processor.get_dev_examples(dev_data_path) "
@@ -161,10 +147,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import logging as logger\n",
@@ -174,9 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# attention mask: avoid performing attention on padding token indices\n",
@@ -186,10 +168,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "tokenizer = BertTokenizer.from_pretrained('bert-base-uncased')"
@@ -198,9 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def esnli_examples_to_features(examples, max_seq_len, tokenizer, cls_token='[CLS]', sep_token='[SEP]', \n",
@@ -241,9 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def text_to_input_ids(text, max_seq_len, tokenizer, cls_token='[CLS]', sep_token='[SEP]', \n",
@@ -273,9 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class EsnliInputFeatures(object):\n",
@@ -293,9 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# # Cache training dataset features\n",
@@ -311,9 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "dev_features = esnli_examples_to_features(dev_examples, max_seq_len, tokenizer)"
@@ -330,7 +300,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -341,9 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%reload_ext autoreload"
@@ -352,9 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%autoreload 2"
@@ -363,9 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from transformers import EncoderDecoderModel\n",
@@ -375,9 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# #initialize Bert2Bert\n",
@@ -387,9 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# training_args = TrainingArguments(\n",
@@ -416,9 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# # Call trainer.train() to train.\n",
@@ -436,9 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "output_dir = save_trained_model_dir\n",
@@ -448,9 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# trainer.save_model(output_dir)"
@@ -466,9 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Load a trained model and vocabulary that you have fine-tuned\n",
@@ -480,9 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "model.config.max_length=128\n",
@@ -493,9 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "eval_args = TrainingArguments(\n",
@@ -509,9 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "evaluator = Trainer(\n",
@@ -524,9 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Evaluate\n",
@@ -542,10 +485,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from nltk.translate.bleu_score import sentence_bleu, corpus_bleu\n",
@@ -554,10 +495,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 20,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_bleu_score(pred_gold_csv):\n",
@@ -568,6 +507,12 @@
     "    Output: bleu score\n",
     "    \"\"\"\n",
     "    bleu_scores = []\n",
+    "    bleu_scores_12 = []\n",
+    "    bleu_scores_13 = []\n",
+    "    bleu_scores_expl1 = []\n",
+    "    bleu_scores_expl2 = []\n",
+    "    bleu_scores_expl3 = []\n",
+    "    bleu_scores_expl3_123 = []\n",
     "    with open(pred_gold_csv, newline='') as f:\n",
     "        reader = csv.reader(f)\n",
     "        for (i, line) in enumerate(reader):\n",
@@ -583,23 +528,32 @@
     "            gold_expl_1 = remove_special_tokens(gold_expl_1)\n",
     "            gold_expl_2 = remove_special_tokens(gold_expl_2)\n",
     "            gold_expl_3 = remove_special_tokens(gold_expl_3)\n",
-    "#             if i % 5 == 0:\n",
-    "#                 print(i)\n",
-    "#                 print('pred_expl: ', tokenizer.decode(pred_expl))\n",
-    "#                 print('gold_expl_1: ', tokenizer.decode(gold_expl_1))\n",
-    "#                 print('gold_expl_2: ', tokenizer.decode(gold_expl_2))\n",
-    "#                 print('gold_expl_3: ', tokenizer.decode(gold_expl_3))\n",
+    "            if i % 2000 == 0:\n",
+    "                print(i)\n",
+    "                print('pred_expl: ', tokenizer.decode(pred_expl))\n",
+    "                print('gold_expl_1: ', tokenizer.decode(gold_expl_1))\n",
+    "                print('gold_expl_2: ', tokenizer.decode(gold_expl_2))\n",
+    "                print('gold_expl_3: ', tokenizer.decode(gold_expl_3))\n",
     "            \n",
     "            bleu_scores.append(corpus_bleu([[gold_expl_1, gold_expl_2, gold_expl_3]], [pred_expl]))\n",
+    "            bleu_scores_12.append(corpus_bleu([[gold_expl_1, gold_expl_2]], [pred_expl]))\n",
+    "            bleu_scores_13.append(corpus_bleu([[gold_expl_1, gold_expl_3]], [pred_expl]))\n",
+    "            bleu_scores_expl1.append(corpus_bleu([[gold_expl_2, gold_expl_3]], [gold_expl_1]))\n",
+    "            bleu_scores_expl2.append(corpus_bleu([[gold_expl_1, gold_expl_3]], [gold_expl_2]))\n",
+    "            bleu_scores_expl3.append(corpus_bleu([[gold_expl_1, gold_expl_2]], [gold_expl_3]))\n",
+    "    print('mean(bleu_scores): ', mean(bleu_scores))\n",
+    "    print('mean(bleu_scores_12): ', mean(bleu_scores_12))\n",
+    "    print('mean(bleu_scores_13): ', mean(bleu_scores_13))\n",
+    "    print('mean(bleu_scores_expl1): ', mean(bleu_scores_expl1))\n",
+    "    print('mean(bleu_scores_expl2): ', mean(bleu_scores_expl2))\n",
+    "    print('mean(bleu_scores_expl3): ', mean(bleu_scores_expl3))\n",
     "    return mean(bleu_scores)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def remove_special_tokens(token_list):    \n",
@@ -622,13 +576,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2000\n",
+      "pred_expl:  a girl is not a guy.\n",
+      "gold_expl_1:  a dark - haired girl and boy constitutes two people as opposed to a solitary guy. pointing at a picture is a completely different event than breaking a keyboard.\n",
+      "gold_expl_2:  the boy is looking at the picture so he cannot broke his keyboard at that time.\n",
+      "gold_expl_3:  a girl and guy are different sexes\n",
+      "4000\n",
+      "pred_expl:  the lady and lady cannot be sliding down a hill and holding her phone while she walks next to her.\n",
+      "gold_expl_1:  either the two people are walking or the two people are sliding down a hill.\n",
+      "gold_expl_2:  a lady means one person two people means two.\n",
+      "gold_expl_3:  a lady is not two people.\n",
+      "6000\n",
+      "pred_expl:  a man cannot be standing next to a bin overflowing with garbage and driving away from it at the same time.\n",
+      "gold_expl_1:  the man can't be standing and driving at the same time.\n",
+      "gold_expl_2:  a man cannot be standing next to a bin, and at the same time driving away from it. a bin cannot be overflowing with garbage and at the same time empty.\n",
+      "gold_expl_3:  the man cannot be driving away from and standing next to something at the same time ; the bin cannot simultaneously be overflowing and empty.\n",
+      "8000\n",
+      "pred_expl:  the boy cannot be playing nintendo on his couch and looking at a camera in a busy street at the same time.\n",
+      "gold_expl_1:  the boy can either be home on his couch or out on the street.\n",
+      "gold_expl_2:  boy can't be playing nintendo if looking at a camera. boy can't be on couch if in busy street.\n",
+      "gold_expl_3:  a boy cannot play nintendo if he is looking at a camera. a person in a busy street is not on a couch.\n",
+      "mean(bleu_scores):  0.33154020295501885\n",
+      "mean(bleu_scores_12):  0.23922609300169084\n",
+      "mean(bleu_scores_13):  0.2456580915856528\n",
+      "mean(bleu_scores_expl1):  0.15204664335509413\n",
+      "mean(bleu_scores_expl2):  0.15575317074872852\n",
+      "mean(bleu_scores_expl3):  0.16064678198817772\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.33154020295501885"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "get_bleu_score('./08:11_09:58:20.csv')"
+    "get_bleu_score('./esnli_train_results/eval_on_dev.csv')"
    ]
   },
   {
@@ -711,18 +706,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:rosa] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-rosa-py"
   },
   "language_info": {
    "codemirror_mode": {
