--- a/examples/EncoderDecoderModel/expl_bleu.ipynb
+++ b/examples/EncoderDecoderModel/expl_bleu.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,9 +14,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/data/anaconda3/envs/rosa/lib/python3.7/site-packages/nltk/translate/bleu_score.py:523: UserWarning: \n",
+      "The hypothesis contains 0 counts of 3-gram overlaps.\n",
+      "Therefore the BLEU score evaluates to 0, independently of\n",
+      "how many N-gram overlaps of lower order it contains.\n",
+      "Consider using lower n-gram order or use SmoothingFunction()\n",
+      "  warnings.warn(_msg)\n",
+      "/data/anaconda3/envs/rosa/lib/python3.7/site-packages/nltk/translate/bleu_score.py:523: UserWarning: \n",
+      "The hypothesis contains 0 counts of 4-gram overlaps.\n",
+      "Therefore the BLEU score evaluates to 0, independently of\n",
+      "how many N-gram overlaps of lower order it contains.\n",
+      "Consider using lower n-gram order or use SmoothingFunction()\n",
+      "  warnings.warn(_msg)\n",
+      "/data/anaconda3/envs/rosa/lib/python3.7/site-packages/nltk/translate/bleu_score.py:523: UserWarning: \n",
+      "The hypothesis contains 0 counts of 2-gram overlaps.\n",
+      "Therefore the BLEU score evaluates to 0, independently of\n",
+      "how many N-gram overlaps of lower order it contains.\n",
+      "Consider using lower n-gram order or use SmoothingFunction()\n",
+      "  warnings.warn(_msg)\n"
+     ]
+    }
+   ],
    "source": [
     "# dev: ./sanity-checks/esnli_dev.csv\n",
     "# test: /data/rosa/data/esnli/esnli_test.csv\n",
@@ -28,6 +53,7 @@
     "    for (i, line) in enumerate(reader):\n",
     "        if i == 0:\n",
     "            continue\n",
+    "        # use Oana's tokenizer\n",
     "        gold_expl_1 = word_tokenize(line[4])\n",
     "        gold_expl_2 = word_tokenize(line[9])\n",
     "        gold_expl_3 = word_tokenize(line[14])\n",
@@ -39,9 +65,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.1318049540655917\n",
+      "0.1324703801626844\n",
+      "0.13323389916331937\n"
+     ]
+    }
+   ],
    "source": [
     "print(mean(bleu_scores_expl1))\n",
     "print(mean(bleu_scores_expl2))\n",
@@ -51,7 +87,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
